Add responsive to Escales page

--- a/escales.html
+++ b/escales.html
@@ -60,7 +60,7 @@
         <!-- banner -->
         <section class="container-fluid escales-banner">
             <div class="escales-inner-banner">
-                <img src="./img/voilier.png" alt="Voilier">
+                <img src="./img/voilier.png" alt="Voilier" class="voilier">
                 <h2 class="menu" id="plume">...</h2>
             </div>
         </section>
@@ -82,7 +82,7 @@
                                     peines.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Contacter</button></a>
+                            <a href="form.html"><button>Rejoindre</button></a>
                         </div>
                         <hr>
                     </article>
@@ -92,28 +92,28 @@
                             <img src="./img/BritishMuseum.png" alt="Musée">
                             <div class="box2">
                                 <p>
-                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
-                                    quotidiens.
-                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
-                                    peines.
+                                    Rendez-vous dans les grands musées d'Europe afin
+                                    de découvrir cultures, langues et peuples. Des origines des Hommes
+                                    à cette vérité que nos ancêtres avaient les mêmes sentiments que nous.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Contacter</button></a>
+                            <a href="form.html"><button>Rejoindre</button></a>
                         </div>
                     </article>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
                         <div class="box1">
-                            <h2>Un tour de France</h2>
+                            <h2>Histoire</h2>
                             <img src="./img/Livres.png" alt="Livres">
                             <div class="box2">
                                 <p>
-                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
-                                    quotidiens.
-                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
-                                    peines.
+                                    Partons en quête des trésors de sagesse reposant au sein des cultures et de la
+                                    litterature
+                                    de tout horizons. Retraçons les époques pour découvrir quelle vérités correspondent
+                                    quelques soient
+                                    le lieux ou la langue.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Contacter</button></a>
+                            <a href="form.html"><button>Rejoindre</button></a>
                         </div>
                     </article>
                 </div>
@@ -127,47 +127,45 @@
                 <div class="row">
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
                         <div class="box1">
-                            <h2>Un tour de France</h2>
+                            <h2>Animaux</h2>
                             <img src="./img/Animaux.png" alt="Animaux">
                             <div class="box2">
                                 <p>
-                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
-                                    quotidiens.
-                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
-                                    peines.
+                                    "La sagesse vient d'en haut" nous dit un proverbes. L'enfant imite le parent, le
+                                    plus jeune
+                                    imite l'aîné. Ainsi les animaux sont le reflet des humains. Venez en découvrir plus
+                                    sur les drôles
+                                    et foisonnantes espèces qui cohabitent sur terre avec nous.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Contacter</button></a>
+                            <a href="form.html"><button>Rejoindre</button></a>
                         </div>
                     </article>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
                         <div class="box1">
-                            <h2>Un tour de France</h2>
+                            <h2>Océan</h2>
                             <img src="./img/Ocean.png" alt="Océan">
                             <div class="box2">
                                 <p>
-                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
-                                    quotidiens.
-                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
-                                    peines.
+                                    La suite de fibonacci, les couleurs, le cycle d l'eau, l'atmoshpère, le corps
+                                    humain,
+                                    apprenons des merveilleuses conceptions qui nous entoure.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Contacter</button></a>
+                            <a href="form.html"><button>Rejoindre</button></a>
                         </div>
                     </article>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
                         <div class="box1">
-                            <h2>Un tour de France</h2>
+                            <h2>Randonnée</h2>
                             <img src="./img/Montagne.png" alt="Montagne">
                             <div class="box2">
                                 <p>
-                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
-                                    quotidiens.
-                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
-                                    peines.
+                                    Au milieu des champs ou la tête dans les nuages. Venez parcourir des sentiers qui
+                                    vous émerveillerons par leur splendeur.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Contacter</button></a>
+                            <a href="form.html"><button>Rejoindre</button></a>
                         </div>
                     </article>
                 </div>
@@ -207,7 +205,7 @@
             <ul class="bgs">
                 <li class="bg01"><a href="#"><span>Grandir</span></a></li>
                 <li class="bg02"><a href="#"><span>Se réunir</span></a></li>
-                <li class="bg03"><a href="#"><span>Nous Contacter</span></a></li>
+                <li class="bg03"><a href="#"><span>Nous Rejoindre</span></a></li>
                 <li class="bg04"><a href="#"><span>Un peu d'histoire</span></a></li>
                 <li class="bg05"><a href="#"><span>Education</span></a></li>
             </ul>
@@ -219,7 +217,7 @@
                     <li><a href=""><img class="break-carousel-img" src="./img/harvest.png" alt="buisson"
                                 title="Grandir"></a></li>
                     <li><a href=""><img class="break-carousel-img" src="./img/birdMessenger.png"
-                                alt="chouette messagère" title="Nous contacter"></a></li>
+                                alt="chouette messagère" title="Nous Rejoindre"></a></li>
                     <li><a href=""><img class="break-carousel-img" src="./img/birdALittleHistory.png"
                                 alt="chouette professeur" title="Un peu d'histoire"></a></li>
                     <li><a href=""><img class="break-carousel-img" src="./img/nest.png" alt="nids"
