--- a/escales.html
+++ b/escales.html
@@ -82,7 +82,7 @@
                                     peines.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Rejoindre</button></a>
+                            <a href="#form"><button>Rejoindre</button></a>
                         </div>
                         <hr>
                     </article>
@@ -97,7 +97,7 @@
                                     à cette vérité que nos ancêtres avaient les mêmes sentiments que nous.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Rejoindre</button></a>
+                            <a href="#form"><button>Rejoindre</button></a>
                         </div>
                     </article>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
@@ -113,7 +113,7 @@
                                     le lieux ou la langue.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Rejoindre</button></a>
+                            <a href="#form"><button>Rejoindre</button></a>
                         </div>
                     </article>
                 </div>
@@ -138,7 +138,7 @@
                                     et foisonnantes espèces qui cohabitent sur terre avec nous.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Rejoindre</button></a>
+                            <a href="#form"><button>Rejoindre</button></a>
                         </div>
                     </article>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
@@ -152,7 +152,7 @@
                                     apprenons des merveilleuses conceptions qui nous entoure.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Rejoindre</button></a>
+                            <a href="#form"><button>Rejoindre</button></a>
                         </div>
                     </article>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
@@ -165,13 +165,39 @@
                                     vous émerveillerons par leur splendeur.
                                 </p>
                             </div>
-                            <a href="form.html"><button>Rejoindre</button></a>
+                            <a href="#form"><button>Rejoindre</button></a>
                         </div>
                     </article>
                 </div>
             </div>
         </section>
         <!-- end escales -->
+        <div class="separate-box sep-box2"></div>
+        <div class="direction"><img src="./icons/boussole.png" alt="boussole"></div>
+        <div class="separate-box sep-box2"></div>
+        <section class="container-fluid escales-wrapper">
+            <div class="container">
+                <div class="row">
+                    <div class="span6">
+                        <form id="form">
+                            <div class="controls controls-row">
+                                <input id="name" name="name" type="text" class="span3" placeholder="Name">
+                                <input id="email" name="email" type="email" class="span3" placeholder="Email address">
+                            </div>
+                            <div class="controls">
+                                <textarea id="message" name="message" class="span6" placeholder="Your Message"
+                                    rows="5"></textarea>
+                            </div>
+
+                            <div class="controls">
+                                <button id="contact-submit" type="submit"
+                                    class="btn btn-primary input-medium pull-right">Send</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
         <div class="separate-box sep-box2"></div>
         <div class="direction"><img src="./icons/boussole.png" alt="boussole"></div>
         <!-- Carousel -->
@@ -242,10 +268,10 @@
                 </div>
                 <hr>
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Gallerie</a></li>
-                    <li><a href="#">Escapade</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="gallerie.html">Gallerie</a></li>
+                    <li><a href="escales.html">Escapade</a></li>
+                    <li><a href="escales.html#">Contact</a></li>
                     <li><a href="#">Incription</a></li>
                 </ul>
             </div>
@@ -257,17 +283,22 @@
                 </div>
                 <hr>
                 <ul>
-                    <li><a href="#">Couple</a></li>
-                    <li><a href="#">Famille</a></li>
-                    <li><a href="#">Enfants</a></li>
-                    <li><a href="#">Amitié</a></li>
-                    <li><a href="#">Emploi</a></li>
+                    <li><a href="gallerie.html#couple">Couple</a></li>
+                    <li><a href="gallerie.html#famille">Famille</a></li>
+                    <li><a href="gallerie.html#relation">Relation</a></li>
+                    <li><a href="gallerie.html#sagesse">Sagesse</a></li>
+                    <li><a href="gallerie.html#emploi">Emploi</a></li>
                 </ul>
             </div>
         </div>
         <br>
         <hr>
-        <span>Copyright 2022 - tous droits réservés.</span>
+        <span>Copyright 2022 - tous droits réservés.</span><br>
+        Icon by <a href="https://freeicons.io/profile/6156">Reda</a> on <a href="https://freeicons.io">freeicons.io</a>>
+        -
+        <a target="_blank" href="https://icones8.fr/icon/UgYD6wFRAn8w/feather">Feather</a> -
+        icône par <a target="_blank" href="https://icones8.fr">Icons8</a> -
+        <a href="https://www.freepng.fr/">Freepng.fr</a>
     </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
