--- a/gallerie.html
+++ b/gallerie.html
@@ -418,10 +418,10 @@
                 </div>
                 <hr>
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Gallerie</a></li>
-                    <li><a href="#">Escapade</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="gallerie.html">Gallerie</a></li>
+                    <li><a href="escales.html">Escapade</a></li>
+                    <li><a href="escales.html#">Contact</a></li>
                     <li><a href="#">Incription</a></li>
                 </ul>
             </div>
@@ -433,18 +433,23 @@
                 </div>
                 <hr>
                 <ul>
-                    <li><a href="#">Couple</a></li>
-                    <li><a href="#">Famille</a></li>
-                    <li><a href="#">Enfants</a></li>
-                    <li><a href="#">Amitié</a></li>
-                    <li><a href="#">Emploi</a></li>
+                    <li><a href="gallerie.html#couple">Couple</a></li>
+                    <li><a href="gallerie.html#famille">Famille</a></li>
+                    <li><a href="gallerie.html#relation">Relation</a></li>
+                    <li><a href="gallerie.html#sagesse">Sagesse</a></li>
+                    <li><a href="gallerie.html#emploi">Emploi</a></li>
                 </ul>
             </div>
         </div>
         <br>
         <hr>
-        <span>Copyright 2022 - tous droits réservés.</span>
+        <span>Copyright 2022 - tous droits réservés.</span><br>
+        <a href="https://fr.pngtree.com/free-backgrounds'">photos d'arrière-plan gratuites dePngtree.com</a> -
+        <a target="_blank" href="https://icones8.fr/icon/UgYD6wFRAn8w/feather">Feather</a> -
+        icône par <a target="_blank" href="https://icones8.fr">Icons8</a> -
+        <a href="https://www.freepng.fr/">Freepng.fr</a>
     </footer>
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
