--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
                 </div>
                 <hr>
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Gallerie</a></li>
-                    <li><a href="#">Escapade</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="gallerie.html">Gallerie</a></li>
+                    <li><a href="escales.html">Escapade</a></li>
+                    <li><a href="escales.html#">Contact</a></li>
                     <li><a href="#">Incription</a></li>
                 </ul>
             </div>
@@ -265,17 +265,22 @@
                 </div>
                 <hr>
                 <ul>
-                    <li><a href="#">Couple</a></li>
-                    <li><a href="#">Famille</a></li>
-                    <li><a href="#">Enfants</a></li>
-                    <li><a href="#">Amitié</a></li>
-                    <li><a href="#">Emploi</a></li>
+                    <li><a href="gallerie.html#couple">Couple</a></li>
+                    <li><a href="gallerie.html#famille">Famille</a></li>
+                    <li><a href="gallerie.html#relation">Relation</a></li>
+                    <li><a href="gallerie.html#sagesse">Sagesse</a></li>
+                    <li><a href="gallerie.html#emploi">Emploi</a></li>
                 </ul>
             </div>
         </div>
         <br>
         <hr>
-        <span>Copyright 2022 - tous droits réservés.</span>
+        <span>Copyright 2022 - tous droits réservés.</span><br>
+        Icon by <a href="https://freeicons.io/profile/6156">Reda</a> on <a href="https://freeicons.io">freeicons.io</a>
+        -
+        <a target="_blank" href="https://icones8.fr/icon/UgYD6wFRAn8w/feather">Feather</a> -
+        icône par <a target="_blank" href="https://icones8.fr">Icons8</a> -
+        <a href="https://www.freepng.fr/">Freepng.fr</a>
     </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
