Html check validation

--- a/escales.html
+++ b/escales.html
@@ -69,6 +69,7 @@
         <!-- escales -->
         <section class="container-fluid escales-wrapper">
             <div class="container">
+                <h2>Ville</h2>
                 <div class="row">
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
                         <div class="box1">
@@ -82,7 +83,7 @@
                                     peines.
                                 </p>
                             </div>
-                            <a href="#form"><button>Rejoindre</button></a>
+                            <button>Rejoindre</button>
                         </div>
                         <hr>
                     </article>
@@ -97,7 +98,7 @@
                                     à cette vérité que nos ancêtres avaient les mêmes sentiments que nous.
                                 </p>
                             </div>
-                            <a href="#form"><button>Rejoindre</button></a>
+                            <button>Rejoindre</button>
                         </div>
                     </article>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
@@ -113,7 +114,7 @@
                                     le lieux ou la langue.
                                 </p>
                             </div>
-                            <a href="#form"><button>Rejoindre</button></a>
+                            <button>Rejoindre</button>
                         </div>
                     </article>
                 </div>
@@ -124,6 +125,7 @@
         <div class="separate-box"></div>
         <section class="container-fluid escales-wrapper">
             <div class="container">
+                <h2>Campagne</h2>
                 <div class="row">
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
                         <div class="box1">
@@ -138,7 +140,7 @@
                                     et foisonnantes espèces qui cohabitent sur terre avec nous.
                                 </p>
                             </div>
-                            <a href="#form"><button>Rejoindre</button></a>
+                            <button>Rejoindre</button>
                         </div>
                     </article>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
@@ -152,7 +154,7 @@
                                     apprenons des merveilleuses conceptions qui nous entoure.
                                 </p>
                             </div>
-                            <a href="#form"><button>Rejoindre</button></a>
+                            <button>Rejoindre</button>
                         </div>
                     </article>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
@@ -165,7 +167,7 @@
                                     vous émerveillerons par leur splendeur.
                                 </p>
                             </div>
-                            <a href="#form"><button>Rejoindre</button></a>
+                            <button>Rejoindre</button>
                         </div>
                     </article>
                 </div>
@@ -177,6 +179,7 @@
         <div class="separate-box sep-box2"></div>
         <section class="container-fluid escales-wrapper">
             <div class="container">
+                <h2>Nous contacter</h2>
                 <div class="row">
                     <div class="span6">
                         <form id="form">
