last commit i hope

--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
             </div>
 
             <ul class="bgs">
-                <li class="bg01"><a href="#"><span>Grandir</span></a></li>
-                <li class="bg02"><a href="#"><span>Se réunir</span></a></li>
-                <li class="bg03"><a href="#"><span>Nous Contacter</span></a></li>
-                <li class="bg04"><a href="#"><span>Un peu d'histoire</span></a></li>
-                <li class="bg05"><a href="#"><span>Education</span></a></li>
+                <li class="bg01"><a href="gallerie.html#sagesse"><span>Sagesse</span></a></li>
+                <li class="bg02"><a href="escales.html"><span>Se réunir</span></a></li>
+                <li class="bg03"><a href="escales.html#form"><span>Nous Contacter</span></a></li>
+                <li class="bg04"><a href="gallerie.html"><span>Un peu d'histoire</span></a></li>
+                <li class="bg05"><a href="gallerie.html#famille"><span>Education</span></a></li>
             </ul>
 
             <div class="break-carousel">
@@ -253,7 +253,7 @@
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="gallerie.html">Gallerie</a></li>
                     <li><a href="escales.html">Escapade</a></li>
-                    <li><a href="escales.html#">Contact</a></li>
+                    <li><a href="escales.html#form">Contact</a></li>
                     <li><a href="#">Incription</a></li>
                 </ul>
             </div>
