--- a/gallerie.html
+++ b/gallerie.html
@@ -48,7 +48,7 @@
                 <li><a href="gallerie.html">Gallerie</a></li>
                 <li><a href="escales.html">Escales</a></li>
                 <li><a href="#footer">à propos</a></li>
-                <li><a href="#">Attributions</a></li>
+                <li><a href="#footer">Attributions</a></li>
             </ul>
             <hr>
         </nav>
